# Examples

./: .gitignore  Task.txt
FileManager/: CMakeLists.txt  Задание (Проводник2).odt
FileManager/cmake/: InitUtils.cmake  Packing.cmake
FileManager/common/src/: object_restrictions.hpp
FileManager/common/templates/: dbus_defines.hpp.in  dbus_service.in  org.foo.dbusfilemanager.xml
FileManager/modules/: CMakeLists.txt
FileManager/modules/FMDaemon/: CMakeLists.txt
FileManager/modules/FMDaemon/src/: dbus_fshelper.cpp  dbus_fshelper.h  deathtimer.cpp  deathtimer.h  fsaction.cpp  fsaction.h  main.cpp
FileManager/modules/FMGUI/: CMakeLists.txt
FileManager/modules/FMGUI/src/: datasource.cpp  datasource.h  fs_img.qrc  fsdbusadapter.cpp  fsdbusadapter.h  fshelper.cpp  fshelper.h  main.cpp  qml_ui.qrc
FileManager/modules/FMGUI/src/models/: fsmodel.cpp  fsmodel.h
FileManager/modules/FMGUI/src/qml/: mainform.qml
FileManager/modules/FMGUI/src/qml/forms/: mainform.qml
FileManager/modules/FMGUI/src/qml/widgets/: FsIconView.qml  FsListView.qml  FsTableView.qml  PopUpMenu.qml
PathWalker/: CMakeLists.txt
PathWalker/Libraries/: CMakeLists.txt
PathWalker/Libraries/PathWalker/: CMakeLists.txt  PathFinder.cpp  PathFinder.h  PathWalker_glob.h
PathWalker/Libraries/PathWalker/Classes/: Point.cpp  Point.h
PathWalker/Libraries/PathWalker/src/: PathFinder.cpp  PathFinder.h  PathWalker.cpp  PathWalker.h  PathWalkerTypes.h  PathWalker_glob.h  errors.h  os_dependence.h
PathWalker/Libraries/PathWalker/src/Classes/: CurrentPos.cpp  CurrentPos.h  ErrorCategory.cpp  ErrorCategory.h  Point.cpp  Point.h
PathWalker/Modules/: CMakeLists.txt
PathWalker/Modules/Example/: CMakeLists.txt
PathWalker/Modules/Example/src/: main.cpp
STC1/: CMakeLists.txt
STC1/src/: constants.h  custom_errors.h  customtablemodel.cpp  customtablemodel.h  datasource.cpp  datasource.h  dbdatasource.cpp  dbdatasource.h  threadeddatasource.cpp  threadeddatasource.h  types.h  xmldatasource.cpp  xmldatasource.h
STC1/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui  uploaddialog.cpp  uploaddialog.h  uploaddialog.ui
STC1/ТЗ/: Тестовое_задание.docx
STC2/: CMakeLists.txt  main.cpp
STC2/src/: comboboxdelegate.cpp  comboboxdelegate.h  constants.h  customtablemodel.cpp  customtablemodel.h  datastorege.cpp  datastorege.h  network.cpp  network.h  sqlite.cpp  sqlite.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  tools.cpp  tools.h  types.h
STC2/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
STC2/ТЗ/: .~lock.Тестовое задание C++, Qt.docx#  Тестовое задание C++, Qt.docx
Taypit1/: CMakeLists.txt  main.cpp
Taypit1/src/: client.cpp  client.h  observer.cpp  observer.h  server.cpp  server.h  serverconnection.cpp  serverconnection.h
Taypit1/ТЗ/: задание2.txt
