cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

project(modules)  # Инициализируем проект

#====================================================================
# Указываем собираемые модули
#====================================================================
#add_subdirectory(FMDaemon)  # Собираем демон, управляющий ФС
add_subdirectory(FMGUI)     # Собираем модуль пользовательского интерфейса
#====================================================================
